Carousal image jump fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -151,6 +151,7 @@ h6{}
     width: 100%;
     height: auto;
     float: left;
+    text-transform:uppercase;
 }
 .top-section-extra-info {
     width: 100%;
